# breakanoid

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  README.txt  THIRD_PARTY_LICENSES.md  THIRD_PARTY_LICENSES.txt  makefile
.github/workflows/: ci.yml
misc/: HOW_TO_CREATE_RES_FILE.txt  icon.res
scripts/: build_all.sh  clone_dependencies.bat  clone_dependencies.sh  clone_deps.bat  clone_deps.sh  run_tests.sh
src/: CMakeLists.txt  config.h  logger.c  logger.h  main.c  types.h  version.h  version.h.in
src/SDL/: SDL_backend.c  SDL_backend.h  sdl_backend.c  sdl_backend.h
src/error/: error.c  error.h  sdl_error.h  vulkan_error.h
src/game/: game.c  game.h
src/imgui/: imgui.c  imgui.h
src/shaders/: compile_shaders.bat  compile_shaders.sh  gradient.comp  shader.frag  shader.vert
src/util/: deletion_queue.c  deletion_queue.h  deletion_stack.c  deletion_stack.h  strbool.h
src/vulkan/: vulkan_cmd.c  vulkan_cmd.h  vulkan_context.c  vulkan_context.h  vulkan_descriptor.c  vulkan_descriptor.h  vulkan_device.c  vulkan_device.h  vulkan_engine.c  vulkan_engine.h  vulkan_image.c  vulkan_image.h  vulkan_instance.c  vulkan_instance.h  vulkan_mem.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_sync.c  vulkan_sync.h  vulkan_types.h
tests/: CMakeLists.txt  test_main.c
tests/unit/: test_logger.c
tests/unit/util/: test_deletion_queue.c  test_deletion_stack.c
